# ssphp-github-webhooks-to-splunk

./: .gitignore  Cargo.toml  README.md  deploy.sh
.github/terraform/github_webhooks/: function_rust.tf
.github/terraform/github_webhooks/function_zip/: host.json
.github/terraform/red/: terraform.tf
.github/workflows/: azure_deploy.yaml
src/: azure_request_response.rs  hec_event.rs  main.rs  service.rs
terraform/github_webhooks/: function_rust.tf  key_vault.tf
terraform/github_webhooks/function_zip/: host.json
terraform/github_webhooks/function_zip/azure/: function.json
terraform/github_webhooks/function_zip/webhooks/: function.json
terraform/red/: terraform.tf
