[package]
name = "ssphp-github-webhooks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "json", "multipart", "rustls"], default-features = false }
sha2 = "*"
hmac = { version = "*"}
hex-literal = "*"
digest = { version = "*", features = ["mac"]}
faster-hex = "*"
azure_core = { version = "0.21", default-features = false, features = ["enable_reqwest_rustls"]}
azure_identity = { version = "0.21", default-features = false, features = ["enable_reqwest_rustls"]}
azure_security_keyvault = { version = "0.21", default-features = false,  features = ["enable_reqwest_rustls"]}
tracing = "0"
gethostname = "1.1.0"

[profile.release]
debug = true
